[tool.poetry]
name = "Discord-Bot-URI"
version = "0.1.0"
description = ""
authors = ["Pedro Valcarenghi <pedro_valcarenghi@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
html2text = "^2020.1.16"
bs4 = "^0.0.1"
discord = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
